# euvd-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SPEC.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
examples/: lookup.rs
scripts/: pre-commit
src/: client.rs  error.rs  lib.rs  models.rs  rate_limiter.rs
tests/: client_tests.rs  model_tests.rs
tests/fixtures/: advisory_by_id.json  critical_vulnerabilities.json  cve_euvd_mapping.csv  exploited_vulnerabilities.json  latest_vulnerabilities.json  search_response.json  search_result.json  vulnerability_by_id.json  vulnerability_with_advisory.json
