[package]
name = "euvd-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust client for ENISA's European Union Vulnerability Database (EUVD)"
repository = "https://github.com/phil/euvd-rs"
keywords = ["security", "vulnerabilities", "euvd", "enisa", "cve"]
categories = ["api-bindings"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
governor = "0.7"
urlencoding = "2.1"

[dev-dependencies]
mockito = "1.6"
tokio-test = "0.4"
